--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<iframe width="560" height="315" src="https://www.youtube.com/embed/7kbOl5BRV4M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<!DOCTYPE html>
+<html>
+    <body>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/7kbOl5BRV4M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </body>
+</html>
